syntax = "proto3";

package withdraw;

// protoc-gen-go 版本大于1.4.0，proto文件需要加上go_package，否则无法生成
option go_package = "./withdraw";

message WithdrawRequest {
  int64 coinId = 1;
  int64 userId = 2;
  string phone = 3;
  string unit = 4;
  string address = 5;
  double amount = 6;
  double fee = 7;
  string jyPassword = 8;
  string code = 9;
  int64 page = 10;
  int64 pageSize = 11;
}

message AddressSimpleList {
  repeated AddressSimple list = 1;
}

message AddressSimple {
  string remark = 1;
  string address = 2;
}

message SendCodeReq {
  string phone = 1;
}

message EmptyResp {

}

message WithdrawRecord{
  int64 id = 1;
  int64 userId = 2;
  Coin coin = 3;
  double totalAmount = 4;
  double fee = 5;
  double arrivedAmount = 6;
  string address = 7;
  string remark = 8;
  string transactionNumber = 9;
  int32 canAutoWithdraw = 10;
  int32 isAuto = 11;
  int32 status = 12;
  string createTime = 13;
  string dealTime = 14;
}

message Coin{
  int32 id = 1;
  string name = 2;
  int32 canAutoWithdraw = 3;
  int32 canRecharge = 4;
  int32 canTransfer = 5;
  int32 canWithdraw = 6;
  double cnyRate = 7;
  int32 enableRpc = 8;
  int32 isPlatformCoin = 9;
  double maxTxFee = 10;
  double maxWithdrawAmount = 11;
  double minTxFee = 12;
  double minWithdrawAmount = 13;
  string nameCn = 14;
  int32 sort = 15;
  int32 status = 16;
  string unit = 17;
  double usdRate = 18;
  double withdrawThreshold = 19;
  int32 hasLegal = 20;
  string coldWalletAddress = 21;
  double minerFee = 22;
  int32 withdrawScale = 23;
  int32 accountType = 24;
  string depositAddress = 25;
  string infolink = 26;
  string information = 27;
  double minRechargeAmount = 28;
}

message RecordList {
  repeated WithdrawRecord list = 1;
  int64 total = 2;
}



service Withdraw {
  rpc FindAddressesByCoinId(WithdrawRequest) returns(AddressSimpleList);
  rpc SendCode(SendCodeReq) returns(EmptyResp);
  rpc Withdraw(WithdrawRequest) returns(EmptyResp);
  rpc WithdrawRecord(WithdrawRequest) returns(RecordList);
}